--- a/Семестр 2/Программирование на основе классов и шаблонов/Lab2 (Дроби)/Fractions/Lab2.vcxproj
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Lab2 (Дроби)/Fractions/Lab2.vcxproj
@@ -140,7 +140,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Fractions.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
