--- a/Семестр 2/Программирование на основе классов и шаблонов/Lab2 (Дроби)/Fractions/Lab2.vcxproj.filters
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Lab2 (Дроби)/Fractions/Lab2.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Fractions.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
