--- a/Семестр 2/Программирование на основе классов и шаблонов/Lab3 (Стек)/Lab3/Lab3.vcxproj
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Lab3 (Стек)/Lab3/Lab3.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="myStack.h" />
+    <ClCompile Include="Stack.h" />
     <ClCompile Include="Lab3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
