--- a/Семестр 2/Программирование на основе классов и шаблонов/Lab3 (Стек)/Lab3/Lab3.vcxproj.filters
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Lab3 (Стек)/Lab3/Lab3.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Lab3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="myStack.h">
+    <ClCompile Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
