--- a/Семестр 2/Программирование на основе классов и шаблонов/Lab4 (Полиномы)/Lab4/Lab4.vcxproj
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Lab4 (Полиномы)/Lab4/Lab4.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab4.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Polynomial.h" />
+    <ClInclude Include="Term.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
