--- a/Семестр 2/Программирование на основе классов и шаблонов/Lab4 (Полиномы)/Lab4/Lab4.vcxproj.filters
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Lab4 (Полиномы)/Lab4/Lab4.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lab4.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Term.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Polynomial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
