--- a/Семестр 2/Программирование на основе классов и шаблонов/Практика/Практика/Практика.vcxproj
+++ b/Семестр 2/Программирование на основе классов и шаблонов/Практика/Практика/Практика.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Практика.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h" />
